<resources>
    <string name="app_name">RxOperators</string>
    <string name="combinational_operator">Combinational</string>
    <string name="filtering_operators">Filtering</string>
    <string name="mathematical_operators">Mathematical</string>
    <string name="transformational_operators">Transformational</string>
    <string name="types_of_operators">Types of Operators</string>
    <string name="see_logs">See Android monitor info logs</string>

    <!--Transformation Operators-->
    <string name="buffer_operator">Buffer</string>
    <string name="map_operator">Map</string>
    <string name="flatmap_operator">Flatmap</string>
    <string name="window_operator">Window</string>
    <!--Combination Operators-->
    <string name="merge_operator">Merge</string>
    <string name="concat_operator">Concat</string>
    <string name="zip_operator">Zip</string>
    <string name="combine_latest_operator">CombineLatest</string>
    <string name="race_operator">Race</string>
    <string name="distinct_operator">Distinct</string>
    <string name="distinct_until_changed_operator">Distinct until changed</string>
    <string name="debounce_operator">Debounce</string>
    <string name="take_until_operator">Take until</string>
    <string name="throttle_operator">Throttle</string>
    <string name="first_operator">First</string>
    <string name="filter_operator">Filter</string>
</resources>
