<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_16dp"
    tools:context="me.gurpreetsk.rxoperators.ui.MainActivity">

    <Button
        android:id="@+id/button_map_operator"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/map_operator"/>

    <Button
        android:id="@+id/button_flatmap_operator"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/flatmap_operator"/>

    <Button
        android:id="@+id/button_buffer_operator"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/buffer_operator"/>

    <!--<Button-->
    <!--android:id="@+id/button_buffer_operator"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?actionBarSize"-->
    <!--android:text="@string/buffer_operator"/>-->

</LinearLayout>